--- a/day01.html
+++ b/day01.html
@@ -17,8 +17,8 @@
   「明明说只是临时出差，但我却感觉时间过得好慢……」<br>
   「他不在的日子里，我总会做出一些……哥哥不能知道的事。」</p>
 
-  <a class="option" href="#">A：拿出哥哥的衬衫，偷偷抱着滚床</a>
-  <a class="option" href="#">B：打开手机，反复播放哥哥语音</a>
-  <a class="option" href="#">C：趴地上，用尾巴磨哥哥的抱枕</a>
+  <a class="option" href="route_A_shirt.html">A: 拿出哥哥的衬衫，偷偷抱着滚床</a>
+<a class="option" href="route_B_voice.html">B: 打开手机，反复播放哥哥语音</a>
+<a class="option" href="route_C_index.html">C: 趴地上，用尾巴磨哥哥的抱枕</a>
 </body>
 </html>
