--- a/day01.html
+++ b/day01.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>律真葵葵猫狗基地♡</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body class="pixel-theme">
   <h1>🐾 Welcome to Ritsu & Aoi's Home Base ♡</h1>
