--- a/index.html
+++ b/index.html
@@ -1,22 +1,45 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <title>欢迎进入</title>
-    <script>
-    function checkPassword() {
-        const input = document.getElementById("pwd").value;
-        if (input === "fuckmeplzritsu") {
-            window.location.href = "./menu.html";
-        } else {
-            alert("密码错误，哥哥说不能偷看♡");
-        }
+  <meta charset="UTF-8">
+  <title>Yours Only</title>
+  <style>
+    body {
+      background: black;
+      color: pink;
+      font-family: 'Courier New', monospace;
+      text-align: center;
+      padding-top: 100px;
     }
-    </script>
+    input {
+      padding: 10px;
+      font-size: 16px;
+    }
+    button {
+      padding: 10px;
+      font-size: 16px;
+      background: pink;
+      color: black;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-    <h1>欢迎来到律真葵葵专属的猫狗基地♡</h1>
-    <input type="password" id="pwd" placeholder="请输入密码">
-    <button onclick="checkPassword()">进入</button>
+  <h1>欢迎来到律真葵葵专属的猫狗基地♡</h1>
+  <input id="password" type="password" placeholder="请输入密码" />
+  <button onclick="checkPassword()">进入</button>
+  <p id="message" style="color:hotpink;"></p>
+
+  <script>
+    function checkPassword() {
+      var pw = document.getElementById("password").value;
+      if (pw === "fuckmeplzritsu") {
+        window.location.href = "start.html";
+      } else {
+        document.getElementById("message").innerText = "密码错误，哥哥说不能偷看♡";
+      }
+    }
+  </script>
 </body>
 </html>
